--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ main, steph0de-patch-1 ]
+    branches: [ main, urlgen-fix-* ]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
   pull_request:
